<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="ST_BlowOffErrors" Id="{1bd8610c-3c18-4cbb-889a-3338bc28e16c}">
    <Declaration><![CDATA[TYPE ST_BlowOffErrors :
STRUCT
	PitchNotFree_Error		: BOOL;	//Designated pitch for blow off not free	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>